--- a/src/translations/fr.po
+++ b/src/translations/fr.po
@@ -234,7 +234,7 @@ msgid ""
 "A smart playlist is a dynamic list of songs that come from your library.  "
 "There are different types of smart playlist that offer different ways of "
 "selecting songs."
-msgstr "Une liste de lecture intelligente est une liste dynamique de morceaux provenants de votre bibliothèque. Il y a différents types de listes de lecture intelligentes, offrant différentes façons de sélectionner des morceaux."
+msgstr "Une liste de lecture intelligente est une liste dynamique de morceaux provenant de votre bibliothèque. Il y a différents types de listes de lecture intelligentes, offrant différentes façons de sélectionner des morceaux."
 
 msgid ""
 "A song will be included in the playlist if it matches these conditions."
@@ -461,7 +461,7 @@ msgstr "Toujours commencer à lire"
 msgid ""
 "An additional plugin is required to use Spotify in Clementine.  Would you "
 "like to download and install it now?"
-msgstr "Un greffib « plugin » supplémentaire est nécessaire pour utiliser Spotify dans Clementine. Voulez-vous le télécharger et l’installer maintenant ?"
+msgstr "Un greffon « plugin » supplémentaire est nécessaire pour utiliser Spotify dans Clementine. Voulez-vous le télécharger et l’installer maintenant ?"
 
 msgid "An error occurred copying the iTunes database from the device"
 msgstr "Une erreur est survenue lors de la copie de la base de données iTunes depuis le périphérique."
@@ -500,10 +500,10 @@ msgstr "Appliquer une compression pour prévenir les coupures"
 
 #, qt-format
 msgid "Are you sure you want to delete the \"%1\" preset?"
-msgstr "Êtes-vous sûr de vouloir supprimer la valeur prédéfinie « %1 »"
+msgstr "Voulez-vous vraiment supprimer la valeur prédéfinie « %1 »"
 
 msgid "Are you sure you want to reset this song's statistics?"
-msgstr "Êtes vous sûr de vouloir réinitialiser les statistiques de ce morceau ?"
+msgstr "Voulez-vous vraiment réinitialiser les statistiques de ce morceau ?"
 
 msgid "Artist"
 msgstr "Artiste"
@@ -1535,10 +1535,10 @@ msgid "Invalid API key"
 msgstr "API key invalide"
 
 msgid "Invalid SKY.fm username or password"
-msgstr "Le nom d’utilisateur ou le mot de passe SKY.fm est incorrecte."
+msgstr "Le nom d’utilisateur ou le mot de passe SKY.fm est incorrect."
 
 msgid "Invalid di.fm username or password"
-msgstr "Le nom d’utilisateur ou le mot de passe di.fm est incorrecte"
+msgstr "Le nom d’utilisateur ou le mot de passe di.fm est incorrect"
 
 msgid "Invalid format"
 msgstr "Format invalide"
@@ -1591,7 +1591,7 @@ msgid "Keep buttons for %1 seconds..."
 msgstr "Pressez le bouton pendant %1 secondes..."
 
 msgid "Keep running in the background when the window is closed"
-msgstr "Laisser tourner en arrière plan lorsque la fenêtre est fermée"
+msgstr "Laisser tourner en arrière-plan lorsque la fenêtre est fermée"
 
 msgid "Keep the original files"
 msgstr "Conserver les fichiers originaux"
@@ -1606,7 +1606,7 @@ msgid "Laptop/Headphones"
 msgstr "Portable/Écouteurs"
 
 msgid "Large Hall"
-msgstr "Large Salle"
+msgstr "Grande salle"
 
 msgid "Large album cover"
 msgstr "Grande pochette d’album"
@@ -1634,7 +1634,7 @@ msgstr "Radio Last.fm Mix - %1"
 
 #, qt-format
 msgid "Last.fm Neighbor Radio - %1"
-msgstr "Last.fm Radio voisin - %1"
+msgstr "Last.fm Radio voisine - %1"
 
 #, qt-format
 msgid "Last.fm Radio Station - %1"
@@ -1764,7 +1764,7 @@ msgid "Low (256x256)"
 msgstr "Faible (256x256)"
 
 msgid "Low complexity profile (LC)"
-msgstr "Profile à faible complexité (FC)"
+msgstr "Profil à faible complexité (FC)"
 
 msgid "Lyrics"
 msgstr "Paroles"
@@ -1795,7 +1795,7 @@ msgid "Magnatune Download"
 msgstr "Télécharger Magnatune"
 
 msgid "Magnatune download finished"
-msgstr "Téléchargement Magnatune terminé"
+msgstr "Téléchargement de Magnatune terminé"
 
 msgid "Main profile (MAIN)"
 msgstr "Profil principal (MAIN)"
@@ -1901,7 +1901,7 @@ msgid "My Radio Station"
 msgstr "Ma station de radio"
 
 msgid "My Recommendations"
-msgstr "Mes recommendations"
+msgstr "Mes recommandations"
 
 msgid "Name"
 msgstr "Nom"
@@ -2297,7 +2297,7 @@ msgid "Rating"
 msgstr "Note"
 
 msgid "Really cancel?"
-msgstr "Êtes-vous sûr de vouloir annuler ?"
+msgstr "Voulez-vous vraiment annuler ?"
 
 msgid "Refresh catalogue"
 msgstr "Mettre à jour le catalogue"
@@ -2573,7 +2573,7 @@ msgid "Show a pretty OSD"
 msgstr "Utiliser l’affichage à l’écran (OSD)"
 
 msgid "Show above status bar"
-msgstr "Afficher au dessus de la barre d’état"
+msgstr "Afficher au-dessus de la barre d’état"
 
 msgid "Show all songs"
 msgstr "Afficher tous les morceaux"
@@ -2796,7 +2796,7 @@ msgid "Syncing Spotify starred tracks"
 msgstr "Synchronisation des morceaux Spotify préférés"
 
 msgid "Tabs on top"
-msgstr "Onglets au dessus"
+msgstr "Onglets au-dessus"
 
 msgid "Tag"
 msgstr "Tag"
@@ -2881,7 +2881,7 @@ msgstr "Troisième niveau"
 msgid ""
 "This action will create a database which could be as big as 150 MB.\n"
 "Do you want to continue anyway?"
-msgstr "Ceci va créer un base de données d’environ 150 Mo.\nÊtes-vous sûr de vouloir continuer ?"
+msgstr "Ceci va créer un base de données d’environ 150 Mo.\nVoulez-vous vraiment continuer ?"
 
 msgid "This album is not available in the requested format"
 msgstr "Cet album n’est pas disponible dans le format demandé"
@@ -2912,7 +2912,7 @@ msgstr "C’est la première fois que vous connectez ce périphérique. Clementi
 msgid ""
 "This playlist will be removed; the action can't be undone. Are you sure you "
 "want to continue?"
-msgstr "Cette liste de lecture sera supprimée ; cette action ne pourra être annulée. Êtes-vous sûr de vouloir continuer ?"
+msgstr "Cette liste de lecture sera supprimée ; cette action ne pourra être annulée. Voulez-vous vraiment continuer ?"
 
 msgid "This stream is for paid subscribers only"
 msgstr "Ce flux est réservé aux abonnés payants"
@@ -3195,14 +3195,14 @@ msgid "You are about to download the following albums"
 msgstr "Vous êtes sur le point de télécharger les albums suivants"
 
 msgid "You are not signed in."
-msgstr "Vous n’êtes pas connecté."
+msgstr "Vous n’êtes pas connecté⋅e."
 
 #, qt-format
 msgid "You are signed in as %1."
-msgstr "Vous êtes connecté en tant que %1."
+msgstr "Vous êtes connecté⋅e en tant que %1."
 
 msgid "You are signed in."
-msgstr "Vous êtes connecté."
+msgstr "Vous êtes connecté⋅e."
 
 msgid "You can change the way the songs in the library are organised."
 msgstr "Vous pouvez changer la manière dont les morceaux de la bibliothèque sont organisés."
@@ -3230,7 +3230,7 @@ msgid ""
 "You can use your Wii Remote as a remote control for Clementine.  <a "
 "href=\"http://www.clementine-player.org/wiimote\">See the page on the "
 "Clementine wiki</a> for more information.\n"
-msgstr "Vous pouvez utiliser votre Wii Remote comme télécommande pour Clementine. <a href=\"http://www.clementine-player.org/wiimote\">Voir la page sur le wiki de Clementine</a> pour plus d’information.\n"
+msgstr "Vous pouvez utiliser votre Wii Remote comme télécommande pour Clementine. <a href=\"http://www.clementine-player.org/wiimote\">Voir la page sur le wiki de Clementine</a> pour plus d’informations.\n"
 
 msgid "You do not have a Grooveshark Anywhere account."
 msgstr "Vous n’avez pas de compte Grooveshark Anywhere."
@@ -3241,7 +3241,7 @@ msgstr "Vous n’avez pas de compte Spotify Premium."
 msgid ""
 "You have selected a Premium-only audio type but do not have any account "
 "details entered"
-msgstr "Vous avez sélectionné un type audio réservé aux membres premiums mais vous n’avez pas entré les informations du compte."
+msgstr "Vous avez sélectionné un type audio réservé aux membres premiums mais vous n’avez pas saisi les informations du compte."
 
 msgid "You have selected an invalid audio type setting"
 msgstr "Vous avez sélectionné un paramètre audio invalide."
@@ -3265,7 +3265,7 @@ msgstr "Vous ne pourrez pas écouter les stations radios de Last.fm puisque vous
 
 #, qt-format
 msgid "You're logged in as <b>%1</b>"
-msgstr "Vous êtes connecté en tant que <b>%1</b>"
+msgstr "Vous êtes connecté⋅e en tant que <b>%1</b>"
 
 msgid "Your Google credentials were incorrect"
 msgstr "Vos identifiants Google sont incorrects"
